# take-home_exam2

./: README.md
HT2_ArthurBonetti/Ex1/: Ex1.cpp  README(1).md  makefile(1)  slurm.sh
HT2_ArthurBonetti/Ex2/: Ex2.cpp  makefile(1)  slurm.sh
HT2_ArthurBonetti/Ex3/: CMakeLists.txt  Makefile(1)  main.cpp  rotate_scale.cpp
HT2_ArthurBonetti/Ex4/: Ex4.cpp  makefile(1)
HT2_ArthurBonetti/Ex5/: Ex5.cpp  Ex5b.cpp  makefile(1)
HT2_ArthurBonetti/Ex6/: compile.sh  print_quad.py  quad_fun.cpp
HT2_ArthurBonetti/Ex8/: answer_a.txt  openmp_test1(2).out  openmp_test2(2).out  openmp_test4(1).out  openmp_test8(1).out  plot.py
HT2_ArthurBonetti/Ex8c/: VFI1(1).out  VFI16(1).out  VFI2(1).out  VFI4(1).out  VFI8(1).out  plot.py
HT2_ArthurBonetti/Ex8d/: answer_d.txt  plot(1).py
HT2_ArthurBonetti/ExBonus/: answer_c.txt  print_pi.py  scaling_mpi4py_1.out  scaling_mpi4py_2.out  scaling_mpi4py_4.out  scaling_mpi4py_8.out  slurm.sh
